Add other source files to the project

--- a/calc-cli/calc-cli.vcxproj.filters
+++ b/calc-cli/calc-cli.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="calc-cli.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="grammar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="token.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
