--- a/calc-cli/calc-cli.vcxproj
+++ b/calc-cli/calc-cli.vcxproj
@@ -140,6 +140,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="calc-cli.cpp" />
+    <ClCompile Include="grammar.cpp" />
+    <ClCompile Include="token.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
