Add Calculator class
Move parsing and calculations to the new Calculator class.
grammar.hpp and grammar.cpp are no longer required.

--- a/calc-cli/calc-cli.vcxproj
+++ b/calc-cli/calc-cli.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="calc-cli.cpp" />
-    <ClCompile Include="grammar.cpp" />
+    <ClCompile Include="calculator.cpp" />
     <ClCompile Include="token.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
