Refactor and normalize code

--- a/calc-cli/calc-cli.vcxproj
+++ b/calc-cli/calc-cli.vcxproj
@@ -143,6 +143,11 @@
     <ClCompile Include="calculator.cpp" />
     <ClCompile Include="token.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="calculator.hpp" />
+    <ClInclude Include="exceptions.hpp" />
+    <ClInclude Include="token.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
