--- a/calc-cli/calc-cli.vcxproj
+++ b/calc-cli/calc-cli.vcxproj
@@ -142,13 +142,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="calc-cli.cpp" />
-    <ClCompile Include="calculator.cpp" />
-    <ClCompile Include="token.cpp" />
+    <ClCompile Include="calculator\calculator.cpp" />
+    <ClCompile Include="calculator\token\token.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="calculator.hpp" />
-    <ClInclude Include="exceptions.hpp" />
-    <ClInclude Include="token.hpp" />
+    <ClInclude Include="calculator\calculator.hpp" />
+    <ClInclude Include="calculator\exceptions\exceptions.hpp" />
+    <ClInclude Include="calculator\token\token.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
