--- a/calc-cli/calc-cli.vcxproj
+++ b/calc-cli/calc-cli.vcxproj
@@ -18,6 +18,16 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\calc-cli.cpp" />
+    <ClCompile Include="src\calculator\calculator.cpp" />
+    <ClCompile Include="src\calculator\token\token.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\calculator\calculator.hpp" />
+    <ClInclude Include="src\calculator\exceptions\exceptions.hpp" />
+    <ClInclude Include="src\calculator\token\token.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -140,16 +150,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="calc-cli.cpp" />
-    <ClCompile Include="calculator\calculator.cpp" />
-    <ClCompile Include="calculator\token\token.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="calculator\calculator.hpp" />
-    <ClInclude Include="calculator\exceptions\exceptions.hpp" />
-    <ClInclude Include="calculator\token\token.hpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
