--- a/calc-cli/calc-cli.vcxproj.filters
+++ b/calc-cli/calc-cli.vcxproj.filters
@@ -15,24 +15,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="calc-cli.cpp">
+    <ClCompile Include="src\calc-cli.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="calculator\calculator.cpp">
+    <ClCompile Include="src\calculator\calculator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="calculator\token\token.cpp">
+    <ClCompile Include="src\calculator\token\token.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="calculator\calculator.hpp">
+    <ClInclude Include="src\calculator\token\token.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="calculator\token\token.hpp">
+    <ClInclude Include="src\calculator\exceptions\exceptions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="calculator\exceptions\exceptions.hpp">
+    <ClInclude Include="src\calculator\calculator.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
