--- a/calc-cli/calc-cli.vcxproj.filters
+++ b/calc-cli/calc-cli.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="src\utils\utils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\functions.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
