--- a/calc-cli/calc-cli.vcxproj
+++ b/calc-cli/calc-cli.vcxproj
@@ -28,7 +28,8 @@
     <ClInclude Include="src\calculator\calculator.hpp" />
     <ClInclude Include="src\calculator\exceptions\exceptions.hpp" />
     <ClInclude Include="src\calculator\token\token.hpp" />
-    <ClInclude Include="src\utils\functions.hpp" />
+    <ClInclude Include="src\utils\calc_consts.hpp" />
+    <ClInclude Include="src\utils\calc_funcs.hpp" />
     <ClInclude Include="src\utils\utils.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
