--- a/calc-cli/calc-cli.vcxproj.filters
+++ b/calc-cli/calc-cli.vcxproj.filters
@@ -41,7 +41,10 @@
     <ClInclude Include="src\utils\utils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\utils\functions.hpp">
+    <ClInclude Include="src\utils\calc_funcs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\calc_consts.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
